alteração de modelo
