# app/main/resources/solo.py
@@ -9,6 +9,9 @@ logger = logging.getLogger()
 atributos = reqparse.RequestParser()
 atributos.add_argument('tipoSolo')
 atributos.add_argument('identificador')
+atributos.add_argument('pesoSoloSeco', type=float)
+atributos.add_argument('pesoSoloUmido', type=float)
+atributos.add_argument('quantidadeAmostra', type=int)
 
 class Solo(Resource):
 
